kubernetes-minikube/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mongo
spec:
 replicas: 1
 selector:
    matchLabels:
      app: mongo
 template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      volumes:
      - name: mongo-data
        emptyDir: {}
