kubernetes-minikube/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: fictional-employee-db-server
spec:
 replicas: 2
 selector:
    matchLabels:
      app: fictional-employee-db-server
 template:
    metadata:
      labels:
        app: fictional-employee-db-server
    spec:
      containers:
      - name: fictional-employee-db-server
        image: norcore/fictional-employee-db-server:1.4
        ports:
        - containerPort: 3001
