kubernetes-minikube/client-service.yml
apiVersion: v1
kind: Service
metadata:
 name: fictional-employee-db-client
spec:
 type: LoadBalancer
 ports:
  - port: 3000
    targetPort: 3000
 selector:
    app: fictional-employee-db-client
