kubernetes-minikube/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
 name: mongo
spec:
 ports:
  - port: 27017
    targetPort: 27017
 selector:
    app: mongo
